--- a/public/css/index.css
+++ b/public/css/index.css
@@ -67,6 +67,12 @@ h1 {
     border-radius: 30px;
 }
 
+form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .role {
     font-size: 30px;
     margin-bottom: 40px;
