--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -41,6 +41,10 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+* {
+	box-shadow: none;
+	border: none;
+}
 
 body {
     background-color: #ffdede;
@@ -51,4 +55,156 @@ h1 {
     text-align: center;
     background-color: #8fe1ff;
     padding-top: 2%;
+}
+
+#canvas-wrapper {
+	display: flex;
+	justify-content: center;
+}
+
+#canvas {
+	width: 50vw;
+	height: 60vh;
+	border: 2px solid black;
+}
+
+#panel {
+	display: flex;
+	margin-top: 20px;
+	justify-content: center;
+}
+
+.color {
+	display: inline-block;
+	width: 50px;
+	height: 50px;
+	border-radius: 50%;
+	margin: 5px;
+}
+
+#red {
+	background-color: red;
+}
+
+#orange {
+	background-color: orange;
+}
+
+#yellow {
+	background-color: yellow;
+}
+
+#blue {
+	background-color: blue;
+}
+
+#green {
+	background-color: green;
+}
+
+#brown {
+	background-color: #964B00;
+}
+
+#purple {
+	background-color: purple;
+}
+
+#black {
+	background-color: black;
+}
+
+#white {
+	background-color: white;
+}
+
+#panel button div {
+	border-radius: 50%;
+}
+
+.strokeWidth {
+	display: flex;
+	width: 50px;
+	height: 50px;
+	justify-content: center;
+	align-items: center;
+	background-color: brown;
+	margin: 5px;
+	padding: 0;
+}
+
+#small div {
+	width: 5px;
+	height: 5px;
+	background-color: black;
+}
+
+#medium div {
+	width: 10px;
+	height: 10px;
+	background-color: black;
+}
+
+#large div {
+	width: 20px;
+	height: 20px;
+	background-color: black;
+}
+
+#xlarge div {
+	width: 40px;
+	height: 40px;
+	background-color: black;
+}
+
+.clicked {
+	border: 3px solid black;
+}
+
+#chat {
+	display: flex;
+	flex-direction: column;
+	position: fixed;
+	width: 15vw;
+	height: 70vh;
+	top: 18vh;
+	right: 1vw;
+	padding: 10px;
+}
+
+#chatbox {
+	overflow: auto;
+	height: 50vh;
+	border: 2px solid black;
+	border-radius: 10px;
+}
+
+#form {
+	display: flex;
+	justify-content: center;
+}
+
+#input {
+	border-radius: 10px;
+	padding: 4px;
+	position: fixed;
+	width: 15vw;
+	font-size: 20px;
+	bottom: 22vh;
+	border: 2px solid black;
+}
+
+.message {
+	font-size: 20px;
+	padding-top: 5px;
+	padding-bottom: 5px;
+	padding-left: 5px;
+}
+
+.message:nth-of-type(2n + 1) {
+	background-color: #e4e4e4;
+}
+
+.sender {
+	font-weight: bold;
 }
