--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -54,7 +54,7 @@ h1 {
     font-size: 60px;
     text-align: center;
     background-color: #8fe1ff;
-    padding-top: 2%;
+    padding-top: 10px;
 }
 
 #canvas-wrapper {
@@ -167,7 +167,7 @@ h1 {
 	position: fixed;
 	width: 15vw;
 	height: 70vh;
-	top: 18vh;
+	top: 24vh;
 	right: 1vw;
 	padding: 10px;
 }
@@ -191,7 +191,7 @@ h1 {
 	position: fixed;
 	width: 15vw;
 	font-size: 20px;
-	bottom: 22vh;
+	bottom: 16vh;
 	border: 2px solid black;
 }
 
@@ -217,7 +217,7 @@ h1 {
 	height: 60vh;
 	border: 2px solid black;
 	left: 1vw;
-	top: 18vh;
+	top: 24vh;
 }
 
 .player {
@@ -243,4 +243,12 @@ h1 {
 
 .purple-player {
 	background-color: purple;
+}
+
+#topbar {
+	height: 10vh;
+	border: 2px solid black;
+	margin-bottom: 20px;
+	margin-left: 10px;
+	margin-right: 10px;
 }
