--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -57,9 +57,20 @@ h1 {
     padding-top: 10px;
 }
 
-#canvas-wrapper {
+.container {
 	display: flex;
 	justify-content: center;
+}
+
+#canvas-wrapper {
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
+	align-items: center;
+	/* grid-column-start: 2;
+	grid-column-end: 3;
+	grid-row-start: 1;
+	grid-row-end: 2; */
 }
 
 #canvas {
@@ -164,12 +175,17 @@ h1 {
 #chat {
 	display: flex;
 	flex-direction: column;
-	position: fixed;
-	width: 15vw;
-	height: 70vh;
+	/* position: fixed;
 	top: 24vh;
-	right: 1vw;
-	padding: 10px;
+	right: 1vw; */
+	margin-left: 20px;
+	width: 15vw;
+	height: 60vh;
+	/* grid-column-start: 3;
+	grid-column-end: 4;
+	grid-row-start: 1;
+	grid-row-end: 2; */
+	/* padding: 10px; */
 }
 
 #chatbox {
@@ -188,10 +204,11 @@ h1 {
 #input {
 	border-radius: 10px;
 	padding: 4px;
-	position: fixed;
+	/* position: fixed; */
 	width: 15vw;
 	font-size: 20px;
-	bottom: 16vh;
+	/* bottom: 16vh; */
+	margin-top: 10px;
 	border: 2px solid black;
 }
 
@@ -210,14 +227,34 @@ h1 {
 	font-weight: bold;
 }
 
+.joined {
+	font-size: 20px;
+	padding-top: 5px;
+	padding-bottom: 5px;
+	padding-left: 5px;
+	text-align: center;
+	color: #00ff00;
+}
+
+.left {
+	font-size: 20px;
+	padding-top: 5px;
+	padding-bottom: 5px;
+	padding-left: 5px;
+	text-align: center;
+	color: #ff0000;
+}
+
 #scoreboard {
-	position: fixed;
-	overflow: auto;
+	/* position: fixed;
+	left: 1vw;
+	top: 24vh; */
 	width: 15vw;
 	height: 60vh;
+	overflow: auto;
 	border: 2px solid black;
-	left: 1vw;
-	top: 24vh;
+	border-radius: 10px;
+	margin-right: 20px;
 }
 
 .player {
@@ -229,26 +266,38 @@ h1 {
 	padding-left: 10px;
 }
 
-.red-player {
-	background-color: red;
-}
-
-.green-player {
-	background-color: green;
-}
-
-.blue-player {
-	background-color: blue;
-}
-
-.purple-player {
-	background-color: purple;
-}
-
 #topbar {
+	display: flex;
+	align-items: center;
 	height: 10vh;
 	border: 2px solid black;
 	margin-bottom: 20px;
+	margin-left: 1vw;
+	margin-right: 1vw;
+}
+
+#clock {
+	width: 7vh;
+	height: 7vh;
+	flex: auto auto;
+	border: 2px solid black;
 	margin-left: 10px;
 	margin-right: 10px;
+	border-radius: 50%;
+}
+
+#round {
+	width: 10vw;
+	height: 7vh;
+	flex: auto auto;
+	border: 2px solid black;
+	border-radius: 10px;
+}
+
+#word {
+	flex: 1 1 auto;
+	text-align: center;
+	letter-spacing: 5px;
+	font-size: 28px;
+	font-weight: 700;
 }
