--- a/public/css/game.css
+++ b/public/css/game.css
@@ -263,8 +263,8 @@ h1 {
 	height: 10vh;
 	border: 2px solid black;
 	margin-bottom: 20px;
-	margin-left: 1vw;
-	margin-right: 1vw;
+	margin-left: 2vw;
+	margin-right: 2vw;
 }
 
 #clock {
@@ -291,4 +291,36 @@ h1 {
 	letter-spacing: 5px;
 	font-size: 28px;
 	font-weight: 700;
+}
+
+/*For admin only*/
+#setting {
+	margin-left: 2vw;
+	border: 2px solid black;
+	border-radius: 10px;
+	padding: 10px;
+	width: 15vw; 
+}
+
+#round-number {
+	width: 8vw;
+	font-size: 20px;
+	padding: 5px;
+    margin: 0;
+}
+
+/*Firefox*/
+input[type=number]{
+	-moz-appearance: textfield;
+}
+
+/*others*/
+input::-webkit-outer-spin-button, input::-webkit-inner-spin-button {
+	-webkit-appearance: none;
+	margin: 0;
+}
+
+#start {
+	font-size: 20px;
+	padding: 5px;
 }
