--- a/public/css/game.css
+++ b/public/css/game.css
@@ -268,6 +268,9 @@ h1 {
 }
 
 #clock {
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	width: 7vh;
 	height: 7vh;
 	flex: auto auto;
