--- a/public/css/game.css
+++ b/public/css/game.css
@@ -271,6 +271,7 @@ h1 {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	font-size: 20px;
 	width: 7vh;
 	height: 7vh;
 	flex: auto auto;
@@ -281,6 +282,10 @@ h1 {
 }
 
 #round {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-size: 20px;
 	width: 10vw;
 	height: 7vh;
 	flex: auto auto;
